Remove password from api calls responses output.
