# internal/models/user.go
@@ -1,12 +1,16 @@
 package models
 
+type UserData struct {
+	ID        int    `json:"student_id"`
+	FirstName string `json:"first_name"`
+	LastName  string `json:"last_name"`
+	Birthday  string `json:"bitrhday"`
+	Email     string `json:"email"`
+}
+
 type User struct {
-	ID           int    `json:"student_id"`
-	FirstName    string `json:"first_name"`
-	LastName     string `json:"last_name"`
-	Birthday     string `json:"bitrhday"`
-	Email        string `json:"email"`
-	Password     string
+	UserData
+	Password     string `json:"password"`
 	PasswordHash string
 }
 
@@ -16,7 +20,7 @@ type Student struct {
 }
 
 type Mentor struct {
-	User
+	UserData
 	Groups []Group
 }
 
